2010-08-01 Braden McDaniel  <braden@endoframe.com>

	* README: Removed obsolete reference to OPENVRML_FT_CONST.

2010-08-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.cpp: Added doc-comments
	for OPENVRML_NODE_IMPL_UTIL_DEFINE_DO_CREATE_TYPE and supporting
	macros.

2010-07-12 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml/text.cpp
	(openvrml_node_vrml97::text_metatype::text_metatype(openvrml::browser&):
	Only call FcInit for non-Windows platforms.

2010-07-10 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/text.cpp: Fixed to compile without
	OPENVRML_ENABLE_RENDER_TEXT_NODE.

2010-07-09 Braden McDaniel  <braden@endoframe.com>

	Removed OPENVRML_API from event listener/emitter class templates.

	These trigger "inconsistent dll linkage" warnings from the
	Microsoft compiler.  For gcc's purposes, forcing symbol visibility
	for templates should be unnecessary.

	* src/libopenvrml/openvrml/event.h
	(field_value_listener): Removed OPENVRML_API.
	(field_value_emitter): Removed OPENVRML_API.

2010-07-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/local/parse_vrml.h
	(openvrml::local::x3d_vrml_parse_actions::on_mfdouble): Added
	semantic action for mfdouble.

2010-07-09 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/image_texture.cpp
	(image_texture_node::do_render_texture(openvrml::viewer &)): Lock
	the image_mutex_ before rendering the texture.

2010-06-06 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/x3d_vrml_grammar.h: Added MFDouble
	parsing.

2010-06-02 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.6 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* src/Makefile.am
	(LIBOPENVRML_LIBRARY_VERSION): Update to 9:4:0.
